--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -332,19 +332,82 @@ MPI\_Alltoallv is a blocking collective. When the routine is called, all process
 \label{fig:mpi_isendirecv_visual}
 \end{figure}
 
-Figure~\ref{fig:mpi_isendirecv_visual} shows a true all-to-subset collective implemented with direct sends and receives between processes that are either blocking (MPI\_Send, MPI\_Recv) or non-blocking (MPI\_Isend, MPI\_Irecv). Since processes strictly communicate with the subset of neighbors necessary, no zero-byte messages inflate communication times for large $p$. The blocking version of this all-to-subset was employed in \cite{BolligFlyerErlebacher2012} for debugging purposes. All sends and receives were serialized making it infeasible to target large $p$ (tests were for $p \leq 10$). In the data that follows the non-blocking sends and receives perform communication concurrently, minimizing the wait for data. 
+Figure~\ref{fig:mpi_isendirecv_visual} shows a true all-to-subset collective implemented with direct sends and receives between processes that are either blocking (MPI\_Send, MPI\_Recv) or non-blocking (MPI\_Isend, MPI\_Irecv). Since processes strictly communicate with the subset of neighbors necessary, no zero-byte messages inflate communication times for large $p$. 
+The blocking version of this all-to-subset was employed in \cite{BolligFlyerErlebacher2012} for debugging purposes (see Appendix~\ref{app:keeneland_spear_scaling} for scaling data). All sends and receives were serialized making it infeasible to target large $p$ (tests were for $p \leq 10$). In the data that follows non-blocking sends and receives are utilized for concurrent communication with multiple processors.
 
-In the case of distributed CPU, it is possible to overlap communication and computation with MPI\_Isend and MPI\_Irecv, but this was not tested.
+
+\section{Scaling Results} 
+Our implementation is now demonstrated to be scalable. The term scalable is used loosely here as two types of scaling are possible: weak and strong. Weak scaling monitors the growth in run-time as the number of processes ($p$) increases with the per process workload, $N_p$, kept constant; in other words the global problem size grows as $N = p*N_p$. Strong scaling keeps a fixed global problem size to consider $N_p = \frac{N}{p}$, where processes are issued diminishing workloads as $p$ grows. 
+
+The two scalings reveal different properties:
+\begin{itemize} 
+\item Weak scaling demonstrates the ability target problem sizes that would not typically fit in memory on a single CPU. Ideal weak scaling implies that as $p$ grows the run-time remains constant. Growth in time for weak-scaling indicates either the 
+\item Strong scaling considers the point at which the cost of communication overcomes the cost of computation. Ideal strong scaling is linear in terms of speedup (i.e., $S_p = p$), but to achieve it is nearly impossible due to the serial cost of communication. As the number of process grows, the cost of communication eventually outweighs the cost of computation. 
+\end{itemize}
+ 
+
+Effort was given to tuning the communication for improved scaling. The progression occurred as follows:  
+\begin{enumerate} 
+\item The entire SpMV for $\setCenters$ is executed, followed by a blocking MPI\_Alltoallv collective.
+\item The MPI\_Alltoallv is replaced by non-blocking MPI\_Isend/MPI\_Irecv.
+\item MPI\_Irecv is issued \emph{before} starting the SpMV to ensure MPI\_Isends have pending connections when ready. 
+\item By assuming the elements of $\setDepend$ are sorted contiguous by neighboring process, the entire decode process is skipped. 
+\item MPI\_Irecv and MPI\_Isend are issued before computing the SpMV for set $\setCenters \backslash \setBoundary$. The process waits for communication to finish before launching the second SpMV for $\setBoundary$. This hides the cost of communication behind computation. 
+\end{enumerate}
+
+\begin{figure} 
+\centering
+\begin{subfigure}{0.6\textwidth}
+\centering
+\includegraphics[width=\textwidth]{../figures/omnigraffle/AlltoallvCPU.pdf}
+\caption{MPI\_Alltoallv}
+\label{fig:alltoallv_cpu}
+\end{subfigure}
+\begin{subfigure}{0.6\textwidth}
+\centering
+\includegraphics[width=\textwidth]{../figures/omnigraffle/IsendIrecvCPU.pdf}
+\caption{MPI\_Isend/MPI\_Irecv}
+\label{fig:alltoallv_cpu}
+\end{subfigure}
+\begin{subfigure}{0.6\textwidth}
+\centering
+\includegraphics[width=\textwidth]{../figures/omnigraffle/IsendPreIrecvCPU.pdf}
+\caption{Post MPI\_IRecv ASAP}
+\label{fig:alltoallv_cpu}
+\end{subfigure}
+\begin{subfigure}{0.6\textwidth}
+\centering
+\includegraphics[width=\textwidth]{../figures/omnigraffle/NoDecode.pdf}
+\caption{No decoding}
+\label{fig:alltoallv_cpu}
+\end{subfigure}
+\begin{subfigure}{0.6\textwidth}
+\centering
+\includegraphics[width=\textwidth]{../figures/omnigraffle/OverlapCPU.pdf}
+\caption{Overlapping SpMV and Communication}
+\label{fig:alltoallv_cpu}
+\end{subfigure}
+\caption{MPI tuning steps to scale from 10 processors in \cite{BolligFlyerErlebacher2012} to 1024 processors. Each horizontal timeline indicates the order of operations for a single distributed SpMV (i.e., between vertical bars). Concurrent operations are launched from top to bottom. } 
+\end{figure}
+
+
+
+
+Possible causes for the growth: 
+\begin{itemize} 
+\item Insufficient workload per processor to hide cost of communication
+\item Processor load balance is not 
+\end{itemize}
+
+
+%TODO: In the case of distributed CPU, it is possible to overlap communication and computation with MPI\_Isend and MPI\_Irecv, but this was not tested.
 
 %TODO: overlapping comm and comp (Q\B) on MPI_Irecv->encode->MPI_Isend->Q\B->MPI_\Waitall->decode->B. 
 %TODO: encoding into a sendBuf
 %TODO: decoding out of recvBuf
 
-%TODO: here I need figure showing isend/irecv in context of encode decode
 
-
-\section{Scaling Results} 
-This section provides evidence that our implementation is scalable. The term scalable is used loosely as there are two types of scaling: weak and strong. Weak scaling implies the total problem size and processor count can increase. The performance scalability of the code depends on the problem size and the MPI collective. 
+The performance scalability of the code depends on the problem size and the MPI collective. 
 
 To demonstrate the effectiveness of our decomposition and indexing, we perform scaling experiments. 
 
@@ -352,6 +415,18 @@ Strong scaling tests the growth in time for a fixed total problem size, and a va
 
 Weak scaling considers the amount of time for a fixed problem size per process and variable number of processors. That is to say, each processor has roughly the same amount of work, so as we scale to a large number of processors, changes in time will be the result of increased communication overhead. 
 
+
+To test and demonstrate scaling of our method, we consider an idealized regular grid in three dimensions. 
+
+verification here is only significant to ensure we are applying all weights. 
+We apply weights to calculate derivatives of a test function in X, Y, Z, and the Laplacian. 
+the grid is regular and 3D.
+We test strong scaling on a $N=160^3$ grid, and weak scaling with $N_p=4000$. This way at $p=1024$ processes we have weak scaling testing the full $N=160^3$ grid. 
+
+We consider a simple idealized problem where derivatives are computed over a regular grid generated in 3-D. The experiment computes the SpMV one thousand times. At the end of each SpMV the MPI\_Alltoallv collective is used to synchronize the local derivative vectors. After one thousand iterations, each process computes the local norm of the resulting vector and an MPI\_Reduce collective dra
+
+
+%Although our weak scaling results are promising, they also contain a problem. First, since we are subsampling a $160^3$ regular grid to get the first $N=p*4000$ nodes, many of the tests consider domains that are ``L" shaped and have odd partitions with limited connectivity.
 
 
 In order to manage expectations of parallel performance in a distributed environment, we turn to Amdahl's law, which states that the total speedup possible for $p$ processors is limited by the fraction of code that must run in serial:
@@ -398,31 +473,13 @@ At this point scaling the code allows us to reach a higher number of nodes. To c
 %TODO: how does \cite{Schubert2011} do it? \cite{Yokota2010}. 
 
 
-By issuing the receives before encoding the send buffers we ensure that no processes wait unnecessarily long for their collectives to start.
 
-
-
-communicate with essential neighbors that need/provide data
-
-MPI\_Isend/MPI\_Irecv also allows for overlapping communication and computation by posting receives early 
-
-\subsubsection{Irecv pre-fill}
-
-
-\subsubsection{No Decode}
-\authnote{figure: per iteration stacked bar for n=50 and 16 processes to show cost of decode}
-\authnote{figure: algorithm for collective}
-
-\authnote{figure: alltoall to isend improvement. justify comm\_combo for up to 16 procs.} 
-\authnote{figure: comm\_combo gains}
-\authnote{figure: algorithm for collective}
-
-\subsubsection{Immediate Isend on Encode}
-\authnote{figure: algorithm for collective}
-
-\authnote{back to section: figure: improvement on all CPU collectives (n=50)}
-
-\authnote{table: show percentage of comm time for actual mpi time. busy network can cause slower comm times. but the decode cost is gone. it can also be an issue if we have saturated comm pipes}
+%\subsubsection{Immediate Isend on Encode}
+%\authnote{figure: algorithm for collective}
+%
+%\authnote{back to section: figure: improvement on all CPU collectives (n=50)}
+%
+%\authnote{table: show percentage of comm time for actual mpi time. busy network can cause slower comm times. but the decode cost is gone. it can also be an issue if we have saturated comm pipes}
 
 
 
@@ -435,26 +492,12 @@ MPI\_Isend/MPI\_Irecv also allows for overlapping communication and computation 
 Here scalable is used loosely as there are two types of scaling: weak and strong. Weak scaling implies the total problem size and processor count can increase. The performance scalability of the code depends on the problem size and the MPI collective. In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is tested on Itasca, a supercomputer at the Minnesota Supercomputing Institute.   
 
 
-To test and demonstrate scaling of our method, we consider an idealized regular grid in three dimensions. 
-
-verification here is only significant to ensure we are applying all weights. 
-We apply weights to calculate derivatives of a test function in X, Y, Z, and the Laplacian. 
-the grid is regular and 3D.
-We test strong scaling on a $N=160^3$ grid, and weak scaling with $N_p=4000$. This way at $p=1024$ processes we have weak scaling testing the full $N=160^3$ grid. 
-
-
-Although our weak scaling results are promising, they also contain a problem. First, since we are subsampling a $160^3$ regular grid to get the first $N=p*4000$ nodes, many of the tests consider domains that are ``L" shaped and have odd partitions with limited connectivity.
-
-\authnote{table showing the min and max Osize,Rsize}
-
-
 \subsection{Bandwidth}
 
-To understand the impact of MPI on these benchmarks we calculate the average and aggregate collective bandwidths. The average bandwidth considers the MPI throughput from the perspective of one processor. 
+%To understand the impact of MPI on these benchmarks we calculate the average and aggregate collective bandwidths. The average bandwidth considers the MPI throughput from the perspective of one processor. 
+%
+%The aggregate bandwidth reveals when processes saturate the interconnects. 
 
-The aggregate bandwidth reveals when processes saturate the interconnects. 
-
-We consider a simple idealized problem where derivatives are computed over a regular grid generated in 3-D. The experiment computes the SpMV one thousand times. At the end of each SpMV the MPI\_Alltoallv collective is used to synchronize the local derivative vectors. After one thousand iterations, each process computes the local norm of the resulting vector and an MPI\_Reduce collective dra
 
 In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is tested on Itasca, a supercomputer at the Minnesota Supercomputing Institute.   
 
@@ -475,10 +518,15 @@ In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is teste
 
 \begin{figure}
 \centering
-\includegraphics[width=0.45\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_alltoallv_commOnly.png}
-\includegraphics[width=0.45\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_alltoallv.png}   \\
-\includegraphics[width=0.45\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_spmvOnly.png} 
-\includegraphics[width=0.45\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_n17_compare.png}
+\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_alltoallv_commOnly.png}
+\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_spmvOnly.png} 
+\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_alltoallv.png}
+\caption{Weak scaling of the SpMV}
+\end{figure}
+
+\begin{figure}
+\centering
+\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_n17_compare.png}
 \caption{Weak scaling of the SpMV}
 \end{figure}
 
@@ -491,7 +539,7 @@ In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is teste
 \begin{figure}
 \centering
 \includegraphics[width=0.6\textwidth]{performance_content/scaling/strong_scaling_4M_regular_isend.png}  
-\includegraphics[width=0.45\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_isend.png}  
+\includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_isend.png}  
 \caption{Scaling of SpMV with MPI\_Isend/MPI\_Irecv}
 \end{figure}
 
