working on data

--- a/latex/performance_content/optimizations.tex
+++ b/latex/performance_content/optimizations.tex
@@ -2,9 +2,11 @@
 
 \chapter{Keeneland Results}
 
-\authnote{Show plots from paper as "before" and this as after} 
 
+\section{MPI\_Send/MPI\_Recv}
+%TODO: get data from paper embedded in here
 
+\section{MPI\_Alltoallv}
 
 The following data, acquired on Keeneland, demonstrates performance of our implementation with communication managed by an MPI\_alltoallv collective. The test case considered is the cosine bell advection problem from Section~\ref{sec:cosine_bell}. Data measures  \authnote{clean}
 
