--- a/latex/explicit_pde_solutions.tex
+++ b/latex/explicit_pde_solutions.tex
@@ -240,15 +240,15 @@ Stencil Size ($n$) & $c_{1}$ & $c_{2}$ & $k$ & $\gamma_c$ \\ \hline
 \label{tbl:cos_hv_params}
 \end{table}
 
-\begin{figure}[ht!]
+\begin{figure}
 \begin{center}
-\begin{subfigure}[b]{0.45\textwidth}
+\begin{subfigure}[t]{0.45\textwidth}
 	\centering
 	\includegraphics[width=1.0\textwidth]{../figures/paper1/cosine_bell/eigs_N4096_n101_noHV_SCALED_color.pdf}
 	\caption{No Hyperviscosity}
 	\label{fig:cosine_eigs_nohv}
 \end{subfigure}
-\begin{subfigure}[b]{0.45\textwidth}
+\begin{subfigure}[t]{0.45\textwidth}
 	\includegraphics[width=1.0\textwidth]{../figures/paper1/cosine_bell/eigs_HV_N4096_n101_k8_gamma5e_m2_SCALED_color.pdf}
 	\caption{With Hyperviscosity ($k=8$ and $\gamma_c = 5*10^{-2}$)}
 	\label{fig:cosine_eigs_hv}
