--- a/latex/distributed_solver.tex
+++ b/latex/distributed_solver.tex
@@ -17,6 +17,16 @@
 \label{chap:distributed_rbffd}
 
 
+
+%TODO: related distributed 
+The power of hindsight tells us RBF-FD can be implemented with any library designed for sparse matrix algebra. 
+
+ that PETSc, Hypre, Trilinos are all libraries/frameworks that we could have developed in, but none of them had GPU support. We continued with custom built code, but that decision required additional decisions from us. 
+
+\cite{Yokota2010}
+\cite{Yokota2012}
+\cite{Schubert2011} 
+
 %TODO: Similar Overlapping algorithm: \url{http://arxiv.org/pdf/1101.0091v1.pdf}
  %Imbalanced computation can be the source of excessive delays as processors sit idle and wait for other processors to catch up. 
 
@@ -239,6 +249,7 @@ We let $\setCenters\in\setAllNodes$ contain indices for all nodes within the par
 Then the set $\setDepend = \setAllNodes \backslash \setCenters$ contains indices of all ghost nodes. 
 The set $\setProvide\in\setCenters$ indexes nodes that are needed in other partitions (i.e., $\bigcup_j \Gamma_{ji}$). The set $\setBoundary\in\setCenters$ consists of nodes dependent on values from $\setDepend$. Note that $\setProvide$ and $\setBoundary$ overlap, but can differ in size due to lack of symmetry in the adjacency matrix. To capture the difference, set $\setBoundary \backslash \setProvide$ are nodes that depend on $\setDepend$ but are not sent to other processes, while $\setCenters \backslash \setBoundary$ are nodes that have no dependency on information from other processes.
 
+%TODO: cleanup: 
 Constructing these index mappings allows each process to ignore nodes/stencils outside their subdomain and focus only on their subset of the problem. Processes avoid both the cost of storing a complete RBF-FD differentiation matrix (DM) as well as full solution vectors. Instead, a local rectangular DM of size $|\setCenters| \times |\setAllNodes|$ is constructed by each process with compressed solution vectors of size $|\setAllNodes|$ to match. Our implementation follows a workflow that first generates stencils, and then partitions the adjacency graph in serial. In parallel, each processor loads its assigned partition, constructs index mappings, and solves for RBF-FD weights to generate a local DM.  
 
 \section{Local Ordering}
@@ -269,6 +280,9 @@ The data transfers involved in this process are illustrated at the bottom of Fig
     Each GPU is only aware of the local indexing in Equation~\ref{eq:decompose_g}. Benefiting from the local structure, set 
 $\setProvide$ is copied off the GPU and into CPU memory as one contiguous memory block. The CPU is then responsible for an \emph{encode} process that maps local to global indices, copies elements of $\setProvide$ into an MPI buffer with one entry for each receiving CPU. The encoded buffer is sent to other processes. As the set $\setDepend$ is received from one or more processes, the data is sent through a \emph{decode} process to reorder elements for the proper local ordering before copying a contiguous block of memory to the GPU. 
 
+%TODO: R is assumed to be contiguous by receiving processor which greatly simplifies life
+
+R is assumed to be contiguous by receiving processor which greatly simplifies life
 
 \begin{figure}
 \begin{center}
@@ -323,7 +337,7 @@ Two types of all-to-subset are illustrated in Figures~\ref{fig:mpi_alltoallv_vis
 Figure~\ref{fig:mpi_alltoallv_visual} shows the behavior of an MPI\_Alltoallv, which interconnects processes and transposes data similar to MPI\_Alltoall, yet it allows variable message sizes per connection. With no padding on messages, fewer bytes are transmitted and the overall communication time drops. Modern implementations of MPI\_Alltoallv detect when zero-byte messages are intended for processes and skip those connections. This gives the routine an all-to-subset behavior. Note that MPI\_Alltoallv should be used with caution: while zero-byte connections are avoided, the overhead in checking message sizes grows as the number of processors scales. For very large $p$ the communication time can be dominated by those operations, defeating the gains in all-to-subset connection (see e.g., \cite{Balaji2010}). 
 
 
-MPI\_Alltoallv is a blocking collective. When the routine is called, all processes must communicate and meet at an internal barrier before control is returned to computation. This limits MPI\_Alltoallv's usefulness for overlapping communication and computation on the CPU. However, with respect to the GPU, overlap is still possible due to non-blocking GPU commands that return immediately after launch and allow the GPU kernels to execute while the CPU waits on communication. In the near future, implementations of MPI v3.0 standard will add MPI\_Ialltoallv, a non-blocking collective that allows overlap on the CPU \cite{MPI}.
+MPI\_Alltoallv is a blocking collective. When the routine is called, all processes must communicate and meet at an internal barrier before control is returned to computation. This limits MPI\_Alltoallv's usefulness for overlapping communication and computation on the CPU. However, with respect to the GPU, overlap is still possible due to non-blocking GPU commands that return immediately after launch. Non-blocking commands allow GPU kernels to execute while the CPU waits on communication. In the near future, implementations of MPI v3.0 standard will add MPI\_Ialltoallv, a non-blocking collective that allows overlap on the CPU \cite{MPI}.
 
 \begin{figure}
 \centering
@@ -333,26 +347,21 @@ MPI\_Alltoallv is a blocking collective. When the routine is called, all process
 \end{figure}
 
 Figure~\ref{fig:mpi_isendirecv_visual} shows a true all-to-subset collective implemented with direct sends and receives between processes that are either blocking (MPI\_Send, MPI\_Recv) or non-blocking (MPI\_Isend, MPI\_Irecv). Since processes strictly communicate with the subset of neighbors necessary, no zero-byte messages inflate communication times for large $p$. 
-The blocking version of this all-to-subset was employed in \cite{BolligFlyerErlebacher2012} for debugging purposes (see Appendix~\ref{app:keeneland_spear_scaling} for scaling data). All sends and receives were serialized making it infeasible to target large $p$ (tests were for $p \leq 10$). In the data that follows non-blocking sends and receives are utilized for concurrent communication with multiple processors.
+The blocking version of this all-to-subset was employed in \cite{BolligFlyerErlebacher2012} for debugging purposes. Unfortunately, all sends and receives were serialized making it infeasible to target $p > 10$. In the data that follows we employ non-blocking sends and receives for concurrent connections to multiple processors. A number of steps are taken to tune communication in order to span RBF-FD across 1024 processors.
 
 
 \section{Scaling Results} 
-Our implementation is now demonstrated to be scalable. The term scalable is used loosely here as two types of scaling are possible: weak and strong. Weak scaling monitors the growth in run-time as the number of processes ($p$) increases with the per process workload, $N_p$, kept constant; in other words the global problem size grows as $N = p*N_p$. Strong scaling keeps a fixed global problem size to consider $N_p = \frac{N}{p}$, where processes are issued diminishing workloads as $p$ grows. 
 
-The two scalings reveal different properties:
-\begin{itemize} 
-\item Weak scaling demonstrates the ability target problem sizes that would not typically fit in memory on a single CPU. Ideal weak scaling implies that as $p$ grows the run-time remains constant. Growth in time for weak-scaling indicates either the 
-\item Strong scaling considers the point at which the cost of communication overcomes the cost of computation. Ideal strong scaling is linear in terms of speedup (i.e., $S_p = p$), but to achieve it is nearly impossible due to the serial cost of communication. As the number of process grows, the cost of communication eventually outweighs the cost of computation. 
-\end{itemize}
- 
+%TODO: Itasca scaling to demonstrate behavior as 
+The scalability of our implementation (\cite{BolligFlyerErlebacher2012}) is test on the Itasca HPC cluster at the University of Minnesota. Owned and operated by the Minnesota Supercomputing Institute, the Itasca cluster is \authnote{finish}
 
-Effort was given to tuning the communication for improved scaling. The progression occurred as follows:  
+Figure~\ref{fig:mpi_tuning} illustrates a number of communication collectives attempted. Each of the tiles, \ref{fig:alltoallv_cpu} -- \ref{fig:overlap_cpu}, show a progression of improvement and effort to tune the communication for a large cluster. The progression occurred as follows:  
 \begin{enumerate} 
-\item The entire SpMV for $\setCenters$ is executed, followed by a blocking MPI\_Alltoallv collective.
-\item The MPI\_Alltoallv is replaced by non-blocking MPI\_Isend/MPI\_Irecv.
-\item MPI\_Irecv is issued \emph{before} starting the SpMV to ensure MPI\_Isends have pending connections when ready. 
-\item By assuming the elements of $\setDepend$ are sorted contiguous by neighboring process, the entire decode process is skipped. 
-\item MPI\_Irecv and MPI\_Isend are issued before computing the SpMV for set $\setCenters \backslash \setBoundary$. The process waits for communication to finish before launching the second SpMV for $\setBoundary$. This hides the cost of communication behind computation. 
+\item The entire SpMV for $\setCenters$ is executed, followed by a blocking MPI\_Alltoallv collective (Figure~\ref{fig:alltoallv_cpu}).
+\item The MPI\_Alltoallv is replaced by non-blocking MPI\_Isend/MPI\_Irecv (Figure~\ref{fig:isendirecv_cpu}).
+\item MPI\_Irecv is issued \emph{before} starting the SpMV to ensure MPI\_Isends have pending connections when ready (Figure~\ref{fig:preirecv_cpu}). 
+\item Based on the assumption that elements of $\setDepend$ are sorted contiguous by neighboring process, the entire decode process is skipped (Figure~\ref{fig:no_decode_cpu}). 
+\item MPI\_Irecv and MPI\_Isend are issued before computing the SpMV for set $\setCenters \backslash \setBoundary$. The process waits for communication to finish before launching the second SpMV on $\setBoundary$. This hides some of the cost for communication behind computation on the CPU (Figure~\ref{fig:overlap_cpu}). 
 \end{enumerate}
 
 \begin{figure} 
@@ -367,39 +376,50 @@ Effort was given to tuning the communication for improved scaling. The progressi
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/IsendIrecvCPU.pdf}
 \caption{MPI\_Isend/MPI\_Irecv}
-\label{fig:alltoallv_cpu}
+\label{fig:isendirecv_cpu}
 \end{subfigure}
 \begin{subfigure}{0.6\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/IsendPreIrecvCPU.pdf}
-\caption{Post MPI\_IRecv ASAP}
-\label{fig:alltoallv_cpu}
+\caption{Post MPI\_Irecv ASAP}
+\label{fig:preirecv_cpu}
 \end{subfigure}
 \begin{subfigure}{0.6\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/NoDecode.pdf}
 \caption{No decoding}
-\label{fig:alltoallv_cpu}
+\label{fig:no_decode_cpu}
 \end{subfigure}
 \begin{subfigure}{0.6\textwidth}
 \centering
 \includegraphics[width=\textwidth]{../figures/omnigraffle/OverlapCPU.pdf}
 \caption{Overlapping SpMV and Communication}
-\label{fig:alltoallv_cpu}
+\label{fig:overlap_cpu}
 \end{subfigure}
-\caption{MPI tuning steps to scale from 10 processors in \cite{BolligFlyerErlebacher2012} to 1024 processors. Each horizontal timeline indicates the order of operations for a single distributed SpMV (i.e., between vertical bars). Concurrent operations are launched from top to bottom. } 
+\caption{MPI tuning steps to scale from 10 processors in \cite{BolligFlyerErlebacher2012} to 1024 processors here. Each horizontal timeline indicates the order of operations for a single distributed SpMV (i.e., between vertical bars). Concurrent operations are launched from top to bottom. } 
+\label{fig:mpi_tuning}
 \end{figure}
 
+Our implementation is now demonstrated to be scalable. The term scalable is used loosely here as two types of scaling are possible: weak and strong. Weak scaling monitors the growth in run-time as the number of processes ($p$) increases with the per process workload, $N_p$, kept constant; in other words the global problem size grows as $N = p*N_p$. Strong scaling keeps a fixed global problem size to consider $N_p = \frac{N}{p}$, where processes are issued diminishing workloads as $p$ grows. 
+
+The two scalings reveal different properties:
+\begin{itemize} 
+\item Weak scaling demonstrates the ability target problem sizes that would not typically fit in memory on a single CPU. Ideal weak scaling implies that as $p$ grows the run-time remains constant. Growth in time for weak-scaling indicates either the 
+\item Strong scaling considers the point at which the cost of communication overcomes the cost of computation. Ideal strong scaling is linear in terms of speedup (i.e., $S_p = p$), but to achieve it is nearly impossible due to the serial cost of communication. As the number of process grows, the cost of communication eventually outweighs the cost of computation. 
+\end{itemize}
+ 
 
 
 
 Possible causes for the growth: 
 \begin{itemize} 
 \item Insufficient workload per processor to hide cost of communication
-\item Processor load balance is not 
+\item Processor workloads are not balanced. Similar to the comparison in \S~\ref{sec:load_balance}, we test the ratio of ghost node counts on $p=1024$ ($n=17$) and find  $\frac{\min N_r}{\max N_r} = 0.39$. The low ratio confirms suspicions that communication loads are imbalanced. 
+\item The underlying network fabric on Itasca limits communication scaling. The QDR-Inifiband network on Itasca is a two-way fat-tree with non-blocking communication in groups of 16 \authnote{nodes/cores?}. 
+\item Send and receive buffers are no properly aligned \authnote{see intel/IBM articles for proposed alignment benefits}. 
 \end{itemize}
 
-
+%TODO: 
 %TODO: In the case of distributed CPU, it is possible to overlap communication and computation with MPI\_Isend and MPI\_Irecv, but this was not tested.
 
 %TODO: overlapping comm and comp (Q\B) on MPI_Irecv->encode->MPI_Isend->Q\B->MPI_\Waitall->decode->B. 
@@ -467,32 +487,7 @@ As an aside, some benchmark on Spear highlight the imbalanced workloads on proce
 At this point scaling the code allows us to reach a higher number of nodes. To confirm this  
 
 
-\subsection{Tuned Scaling (Itasca)}
 
-
-%TODO: how does \cite{Schubert2011} do it? \cite{Yokota2010}. 
-
-
-
-%\subsubsection{Immediate Isend on Encode}
-%\authnote{figure: algorithm for collective}
-%
-%\authnote{back to section: figure: improvement on all CPU collectives (n=50)}
-%
-%\authnote{table: show percentage of comm time for actual mpi time. busy network can cause slower comm times. but the decode cost is gone. it can also be an issue if we have saturated comm pipes}
-
-
-
-\section{Conclusion}
-
-      Our approach is scalable to a very large number of 
-		processors as the individual processes do not require the 
-		full mapping between RBF nodes and CPUs. 
-		
-Here scalable is used loosely as there are two types of scaling: weak and strong. Weak scaling implies the total problem size and processor count can increase. The performance scalability of the code depends on the problem size and the MPI collective. In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is tested on Itasca, a supercomputer at the Minnesota Supercomputing Institute.   
-
-
-\subsection{Bandwidth}
 
 %To understand the impact of MPI on these benchmarks we calculate the average and aggregate collective bandwidths. The average bandwidth considers the MPI throughput from the perspective of one processor. 
 %
@@ -542,6 +537,22 @@ In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is teste
 \includegraphics[width=0.6\textwidth]{performance_content/scaling/weak_scaling_np4000_regular_isend.png}  
 \caption{Scaling of SpMV with MPI\_Isend/MPI\_Irecv}
 \end{figure}
+
+\section{Conclusion}
+
+      Our approach is scalable, but still limited efficiency on a very large number of 
+		processors. 
+		
+Individual processes do not require the 
+		full mapping between RBF nodes and CPUs. 
+		
+Here scalable is used loosely as there are two types of scaling: weak and strong. Weak scaling implies the total problem size and processor count can increase. The performance scalability of the code depends on the problem size and the MPI collective. In Figure~\ref{fig:strong_scaling} the strong scaling of $N=10^6$ nodes is tested on Itasca, a supercomputer at the Minnesota Supercomputing Institute.   
+
+
+As part of the future investigations we anticipate the need to consider the impact of properly aligned communication buffers. Potentially a hierarchical communication pattern to fit the topology of the underlying fat-tree topology on Itasca. 
+
+
+
 
 
 \chapter{Distributed GPU SpMV (incomplete)}
